# jira_update

./: .env.example  .gitignore  LICENSE  README.md  jira_proc.py  pyproject.toml  state.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
completions/: jira-update.bash  jira-update.ps1  jira-update.zsh
go/: go.mod  main.go  parse_since_arg_test.go
python/: jira_proc.py  pyproject.toml  requirements.txt  test_parse_since_arg.py
