[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-update"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[tool.setuptools]
py-modules = ["jira_proc"]

[project.scripts]
jira-update = "jira_proc:main"
